Flesh out unfinished sentence in Question 5

--- a/tex/exercise2.tex
+++ b/tex/exercise2.tex
@@ -58,7 +58,7 @@ The high values from the LGM through to the end of HS1 provide evidence for the 
 
 
 To visualise the varying influence of Northern and Southern sourced waters over the past 20 ka, an assumption is made that AABW (\eNd=$-8$ \parencite{garcia2014rare}) and NADW (\eNd=$-16.15$, lowest value in core) represent the two mixing end-members for the ocean mass bathing the Bermuda rise, as recorded in sediment core OCE326-GGC6.
-The intrusion of southern sourced waters can clearly be seen in Figure \ref{fig:north_south}.
+The dominance of NADW during warm periods and the intrusion of southern sourced waters during stadials can clearly be seen in Figure \ref{fig:north_south}.
 However, the exact values used here were chosen rather abitrarily from among a large range of observations for the \emph{present}, whereas values may have varied considerably over time, especially given that AABW, treated here as an opposing end-member to NADW, is in fact a product of Atlantic, Indian and Pacific waters which are likely to have mixed in different ratios in the past.
 Futhermore, the dominant processes controlling water radiogenic properties may have changed.
 This highlights the uncertainty introduced when certain ocean mass properties, such as \eNd{}, are assumed to be constant over time.
